# time_from_uuid

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.bat  testMain.cpp  uuidTest.cpp  uuid_to_time.hpp
